<resources>
    <string name="app_name">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gliga Mihai</string>
    <string name="nav_header_subtitle">mihaigliga99@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="application_logo">Application Logo</string>
    <string name="trip_name">Trip name</string>
    <string name="destination">Destination</string>
    <string name="price_rating">Price/Rating</string>
    <string name="menu_share">Share</string>
    <string name="i_am_a_small_android_dev">I am a small android dev</string>
    <string name="insert_trip_name">Insert trip name</string>
    <string name="insert_trip_destination">Insert trip destination</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="save">save</string>
    <string name="text_price">\"Price \"</string>
</resources>