<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="104dp"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewTripItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        android:elevation="8dp">
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/tripImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:elevation="8dp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintStart_toStartOf="@id/cardViewTripItem"
        app:layout_constraintTop_toTopOf="@id/cardViewTripItem" />
    <TextView
        android:elevation="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tripImage"
        app:layout_constraintTop_toTopOf="@id/cardViewTripItem"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/trip_name"
        android:id="@+id/tripName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tripName"
        android:elevation="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tripImage"
        android:text="@string/destination"
        android:layout_margin="8dp"
        android:id="@+id/tripDestination"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@id/cardViewTripItem"
        app:layout_constraintTop_toTopOf="@id/cardViewTripItem"
        android:button="@drawable/ic_bookmark_trip"
        android:id="@+id/tripBookmark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tripBookmark"
        app:layout_constraintEnd_toEndOf="@id/cardViewTripItem"
        android:layout_margin="8dp"
        android:text="@string/price_rating"
        android:id="@+id/tripPriceRating"/>


</androidx.constraintlayout.widget.ConstraintLayout>